--- a/backend/.env
+++ b/backend/.env
@@ -1,1 +1,3 @@
 MONGO_URI = "mongodb+srv://sumanthjmm04:paytm@cluster0.ewzsy3e.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0"
+
+JWT_SECRET = "secret"
